[gd_scene load_steps=4 format=3 uid="uid://tes5qvvjxl1f"]

[ext_resource type="Script" uid="uid://df1xryx5570ic" path="res://scenes/endless_runner/person.gd" id="1_31ckc"]
[ext_resource type="Texture2D" uid="uid://da3hlf8u7y4em" path="res://icon.svg" id="2_1ml0p"]

[sub_resource type="LabelSettings" id="LabelSettings_q7wum"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="Person" type="Node2D"]
script = ExtResource("1_31ckc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.536743e-07, 9.536743e-07)
scale = Vector2(0.37499997, 0.37499997)
texture = ExtResource("2_1ml0p")

[node name="HeldSign" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -16.0

[node name="Label" type="Label" parent="HeldSign"]
layout_mode = 0
offset_top = -5.0
offset_right = 48.0
offset_bottom = 40.0
text = "L"
label_settings = SubResource("LabelSettings_q7wum")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StandupTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="StandupTimer" to="." method="_on_standup_timer_timeout"]
